--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "better-react-mathjax": "^2.0.3",
+    "date-fns": "^3.6.0",
+    "markdown-to-jsx": "^7.4.7",
     "plasmo": "0.87.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
     "tailwindcss": "3.4.1"
   },
   "devDependencies": {
@@ -21,13 +25,22 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "path-browserify": "^1.0.0",
     "postcss": "8.4.33",
     "prettier": "3.2.4",
-    "typescript": "5.3.3"
+    "process": "^0.11.10",
+    "typescript": "5.3.3",
+    "url": "^0.11.0"
   },
   "manifest": {
     "host_permissions": [
       "https://*/*"
+    ],
+    "permissions": [
+      "storage",
+      "webNavigation",
+      "activeTab",
+      "unlimitedStorage"
     ]
   }
 }
