--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "package": "plasmo package"
+    "package": "plasmo package",
+    "test": "jest"
   },
   "dependencies": {
     "better-react-mathjax": "^2.0.3",
     "date-fns": "^3.6.0",
+    "jest": "^29.7.0",
     "markdown-to-jsx": "^7.4.7",
     "plasmo": "0.87.2",
     "react": "18.2.0",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@types/chrome": "0.0.258",
+    "@types/jest": "^29.5.12",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
@@ -29,6 +32,7 @@
     "postcss": "8.4.33",
     "prettier": "3.2.4",
     "process": "^0.11.10",
+    "ts-jest": "^29.1.5",
     "typescript": "5.3.3",
     "url": "^0.11.0"
   },
