--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
+    "react-mathjax2": "^0.0.2",
     "tailwindcss": "3.4.1"
   },
   "devDependencies": {
@@ -37,14 +38,20 @@
     "url": "^0.11.0"
   },
   "manifest": {
-    "host_permissions": [
-      "https://*/*"
-    ],
     "permissions": [
       "storage",
       "webNavigation",
-      "activeTab",
-      "unlimitedStorage"
+      "activeTab"
+    ],
+    "web_accessible_resources": [
+      {
+        "resources": [
+          "assets/mjex.js"
+        ],
+        "matches": [
+          "<all_urls>"
+        ]
+      }
     ]
   }
 }
