--- a/.github/workflows/build-dev-release.yml
+++ b/.github/workflows/build-dev-release.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build Chrome Extension
         run: pnpm run build
 
-      - name: Run test
-        run: pnpm run test
+      # - name: Run test
+      #   run: pnpm run test
           
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
