--- a/.github/workflows/build-dev-release.yml
+++ b/.github/workflows/build-dev-release.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches:
       - master
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -39,6 +40,7 @@ jobs:
         with:
           name: chrome-extension-zip
           path: ${{ env.BUILD_DIR }}/chrome-mv3-prod.zip
+
   release:
     runs-on: ubuntu-latest
     needs: build
@@ -50,14 +52,19 @@ jobs:
         with:
           name: chrome-extension
           path: build
+      
+      - name: Determine next tag version
+        id: get_tag_version
+        run: echo "::set-output name=tag_version::v$(($(git tag -l | cut -d '.' -f 2 | sort -n | tail -n 1)+1)).0"
+      
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
-          tag_name: v0.0.1
-          release_name: Release v0.0.1
+          tag_name: ${{ steps.get_tag_version.outputs.tag_version }}
+          release_name: Release ${{ steps.get_tag_version.outputs.tag_version }}
           files: |
             build/*  # Adjust to include all necessary files
           draft: false  # Change to true if you want to create a draft release
