--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/dompurify": "^3.0.5",
     "better-react-mathjax": "^2.0.3",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.1.5",
     "jest": "^29.7.0",
     "markdown-to-jsx": "^7.4.7",
     "plasmo": "0.87.2",
